--- a/serverless.yml
+++ b/serverless.yml
@@ -26,7 +26,7 @@ package:
 functions:
   subjectRateLink:
     name: ${self:provider.stage}-${self:service}
-    handler: com.universy.subject.rate.StudentSubjectRateDynamoHandler
+    handler: app.universy.subject.rate.StudentSubjectRateDynamoHandler
     events:
       - stream:
           type: dynamodb
